# Proyecto_AYDA

./: .gitignore  BuildAndRun.sh  CMakeLists.txt  Changelog.md  CompileDebug.sh  Makefile  README.md  RunExamples.sh
.github/workflows/: cmake-single-platform.yml  makefile.yml
include/: Constraint3D.hpp  Object3D.hpp  Objects3D.hpp  Patterns.hpp  Scene3D.hpp  Visualization.hpp  Wfc3D.hpp  visualization.hpp
src/: Constraint3D.cpp  Object3D.cpp  Scene3D.cpp  Visualization.cpp  Wfc3D.cpp  main.cpp  visualization.cpp
tests/: main.cpp
